# wine-fi

./: ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TRACEABILITY.md  README.md  STATUS_INTEGRATION_SUMMARY.md  WINE_TOKEN_INTEGRATION.md  WINE_TRACEABILITY_GUIDE.md  package-lock.json  package.json
app/: layout.tsx
app/dashboard/: page.tsx
app/inversiones/: page.tsx
app/lotes/: page.tsx
app/mercado/: page.tsx
app/nuevo-lote/: page.tsx
app/qr/: page.tsx
app/scan/: page.tsx
components/: AppProviders.tsx  CTASection.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navigation.tsx  QRScannerWrapper.tsx  WhyInvestSection.tsx  WineCard.tsx
contexts/: LanguageContext.tsx
contracts/: .deployed_wine_token_testnet.env  Cargo.toml  README.md  WINE_CONTRACTS_GUIDE.md  create_wine_token_example.sh  deploy_wine_token.sh
contracts/contracts/common/: Cargo.toml
contracts/contracts/common/src/: lib.rs  models.rs
contracts/contracts/factory/: Cargo.toml  Makefile
contracts/contracts/factory/src/: constants.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  vault.rs
contracts/contracts/factory/src/test/factory/: admin.rs  budget.rs  create_defindex.rs  events.rs  initialize.rs  mod.rs
contracts/contracts/token/: Cargo.toml
contracts/contracts/token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  lib.rs  storage_types.rs  test.rs  wine_lot_metadata.rs
contracts/contracts/vault/: Cargo.toml  Makefile
contracts/contracts/vault/src/: access.rs  constants.rs  deposit.rs  error.rs  events.rs  funds.rs  interface.rs  investment.rs  lib.rs  models.rs  report.rs  router.rs  storage.rs  strategies.rs  test.rs  utils.rs
contracts/contracts/vault/src/test/vault/: admin.rs  budget.rs  deposit.rs  deposit_and_invest.rs  events.rs  fees.rs  funds.rs  get_asset_amounts_per_shares.rs  initialize.rs  mod.rs  rebalance.rs  rescue.rs  router.rs  upgrade.rs  withdraw.rs
contracts/contracts/vault/src/token/: allowance.rs  balance.rs  contract.rs  metadata.rs  mod.rs  storage_types.rs  total_supply.rs  wine_lot_metadata.rs
contracts/contracts/wine_factory/: Cargo.toml
contracts/contracts/wine_factory/src/: lib.rs  storage.rs
contracts/contracts/wine_token/: Cargo.toml
contracts/contracts/wine_token/src/: lib.rs  storage.rs
contracts_winefi/: README.md
lib/: supabaseClient.ts  translations.ts  wine-tokens.ts
supabase/: config.toml
(+179 files in other folders)
