[workspace]
resolver = "2"
members = [
  "contracts/common",
  "contracts/wine_token",
  "contracts/wine_factory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["VineFi Team"]
repository = "https://github.com/VineFi/wine-fi"

[workspace.dependencies]
soroban-sdk = "22.0.3"
soroban-token-sdk = "22.0.3"
common = { path = "contracts/common", package = "common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
