[package]
name = "vinifica-factory"
version = { workspace = true }
authors = ["coderipper <joaquin@paltalabs.io>"]
license = { workspace = true }
edition = { workspace = true }
publish = false
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]
 
[dependencies] 
soroban-sdk = { workspace = true }
vinifica-strategy-core = { workspace = true }
vinifica-vault = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
